--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Palindrome Checker</h1>
+    <header>
+        <h1 id="header">Palindrome Checker</h1>
+    </header>
+    <section>
+
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
