--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <h1 id="header">Palindrome Checker</h1>
     </header>
     <section>
-
+        <div id="input-container">
+            <label for="input" id="palindrome-label" class="inside-input-container">Insert:</label>
+            <input type="text" id="input" class="inside-input-container" placeholder="Input:" required>
+            <button type="buttone" id="palindrome-button" class="inside-input-container">Submit</button>
+        </div>
     </section>
     <script src="script.js"></script>
 </body>
