--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <header>
-        <h1 id="header">Palindrome Checker</h1>
+        <h1 class="header">Palindrome Checker</h1>
+        <h4 class="header">(Special characters will be removed as well as spaces, also case insensitive)</h4>
     </header>
     <section>
         <div id="input-container">
             <label for="input" id="palindrome-label" class="inside-input-container">Insert:</label>
             <input type="text" id="input" class="inside-input-container" placeholder="Input:" required>
-            <button type="buttone" id="palindrome-button" class="inside-input-container">Submit</button>
+            <button type="button" id="palindrome-button" class="inside-input-container">Submit</button>
         </div>
     </section>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
